[package]
name = "badchain"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
sled = "0.34.6"
anyhow = "1.0.41"
clap = "2.33.3"
